--- a/edrar/templates/edrar/home.html
+++ b/edrar/templates/edrar/home.html
@@ -3,7 +3,7 @@
 <div id="action-container" class="mb-3">
     <div class="row">
         <div class="col">
-            <a href="{% url 'edrar_add' %}" class="btn btn-primary"><i class="fa fa-plus mr-2" aria-hidden="true"></i>Log Activity</a>
+            <a href="{% url 'edrar_log' %}" class="btn btn-primary"><i class="fa fa-plus mr-2" aria-hidden="true"></i>Log Activity</a>
             <button class="btn btn-secondary"><i class="fa fa-download mr-2" aria-hidden="true"></i>Generate Report</button>
         </div>
         <div class="col">
