--- a/edrar/templates/edrar/edrar_base_template.html
+++ b/edrar/templates/edrar/edrar_base_template.html
@@ -62,7 +62,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span id="user-name" class="mr-2 d-none d-lg-inline">{{ user.username }}</span>
+                                    <span id="user-name" data-id="{{ user.id }}" class="mr-2 d-none d-lg-inline">{{ user.username }}</span>
                                     <img class="img-profile rounded-circle" src="{%static 'edrar/img/undraw_profile.svg' %}">
                                 </a>
                                 <!-- Dropdown - User Information -->
