Successfully modified views.py for separate method for getting device,cell,trx instance

--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -116,8 +116,8 @@
                         <th>TRX Name</th>
                         <th>Cell Name</th>
                         <th>BTS Name</th>
-                        <th>E1 Assignment</th>
                         <th>Admin State</th>
+                        <th>Status</th>
                         <!-- HIDDEN FIELDS -->
                         <th>ID</th>
                         <th>Rel_ID</th>
