Completed all activities except for change site code which is parked for now

--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -203,26 +203,26 @@
         </div>
         <div class="col-sm-3 tf-container d-none">
             <div class="form-group">
+                <label for="trx_config">TRX Config</label>
+                {{form.trx_config}}
+            </div>
+        </div>
+        <div class="col-sm-3 tf-container d-none">
+            <div class="form-group">
                 <label for="iub_type">IuB Type</label>
                 {{form.iub_type}}
             </div>
         </div>
         <div class="col-sm-3 tf-container d-none">
             <div class="form-group">
-                <label for="bandwidth">Bandwidth</label>
-                {{form.bandwidth}}
+                <label for="abis">ABIS</label>
+                {{form.abis}}
             </div>
         </div>
         <div class="col-sm-3 tf-container d-none">
             <div class="form-group">
-                <label for="omip">OMIP</label>
-                {{form.omip}}
-            </div>
-        </div>
-        <div class="col-sm-3 tf-container d-none">
-            <div class="form-group">
-                <label for="trx_config">TRX Config</label>
-                {{form.trx_config}}
+                <label for="iubip">IuBIP</label>
+                {{form.iubip}}
             </div>
         </div>
         <div class="col-sm-3 tf-container d-none">
@@ -235,6 +235,18 @@
             <div class="form-group">
                 <label for="s1_u">S1_U</label>
                 {{form.s1_u}}
+            </div>
+        </div>
+        <div class="col-sm-3 tf-container d-none">
+            <div class="form-group">
+                <label for="omip">OMIP</label>
+                {{form.omip}}
+            </div>
+        </div>
+        <div class="col-sm-3 tf-container d-none">
+            <div class="form-group">
+                <label for="bandwidth">Bandwidth</label>
+                {{form.bandwidth}}
             </div>
         </div>
     </div>
