Added Add Device/Cell/Trx to elements datatable in prep for elements not found in nms data

--- a/edrar/static/edrar/css/custom.css
+++ b/edrar/static/edrar/css/custom.css
@@ -105,3 +105,17 @@ label.dt-child{
     font-weight: bold;
 }
 
+.upper-right{
+    position: relative;
+    right: -15px;
+    top: 3px;
+    cursor: pointer;
+}
+
+.upper-right:hover{
+    color: #343cb3;
+}
+
+.upper-right:active{
+    color: #2967c4;
+}
