--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -41,6 +41,7 @@
 
     <div id="filtered-device-table-container" class="row mx-3 mt-1 small datatable-container d-none">
         <h5>Asset Inventory Device Data</h5>
+        <i id="add-device" class="upper-right d-none">[Add Device]</i>
         <div class="col-lg-12">
             <table id="filtered-device-table" class="table nowrap" style="width: 100%;">
                 <thead class="thead-light">
@@ -74,6 +75,7 @@
 
     <div id="filtered-cell-table-container" class="row mx-3 mt-1 small datatable-container d-none">
         <h5>Asset Inventory Cell Data</h5>
+        <i id="add-cell" class="upper-right d-none">[Add Cell]</i>
         <div class="col-lg-12">
             <table id="filtered-cell-table" class="table nowrap" style="width: 100%;">
                 <thead class="thead-light">
@@ -111,6 +113,7 @@
 
     <div id="filtered-trx-table-container" class="row mx-3 mt-1 small datatable-container d-none">
         <h5>Asset Inventory TRX Data</h5>
+        <i id="add-trx" class="upper-right d-none">[Add Trx]</i>
         <div class="col-lg-12">
             <table id="filtered-trx-table" class="table nowrap" style="width: 100%;">
                 <thead class="thead-light">
